<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_close_button">Close</string>
    <string name="about_content">Call recorder by Kobi Krasnoff</string>
    <string name="about_title">About</string>
    <string name="app_name">Call recorder for Android</string>
    <string name="confirm_delete_no">no</string>
    <string name="confirm_delete_text">Are you sure you want to delete this recording?</string>
    <string name="confirm_delete_title">Alert Dialog</string>
    <string name="confirm_delete_yes">yes</string>
    <string name="confirm_play">Play</string>
    <string name="confirm_send">Send</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_delete_all_content">Are you sure you want to delete all of your recordings?</string>
    <string name="dialog_delete_all_no">No</string>
    <string name="dialog_delete_all_title">Alert Message</string>
    <string name="dialog_delete_all_yes">Yes</string>
    <string name="dialog_no_memory">"There is no memory card in your device.
Please install one."</string>
    <string name="dialog_privacy">Privacy Policy</string>
    <string name="dialog_privacy_terms">Please click the buttons below to see the terms of use and privacy policy</string>
    <string name="dialog_terms">Terms of use</string>
    <string name="dialog_welcome_screen">Welcome Screen</string>
    <string name="hello_world">Hello world!</string>
    <string name="list_erase_your_recordeed_call">erase your recorded call</string>
    <string name="list_play_your_recordeed_call">play your recorded call</string>
    <string name="list_send_your_recordeed_call">send your recorded call</string>
    <string name="menu_Disable_record">Disable Record</string>
    <string name="menu_Enable_record">Enable Record</string>
    <string name="menu_about">About</string>
    <string name="menu_delete_all">Delete All recordings</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_record_is_now_disabled">The application is now not enable to record calls</string>
    <string name="menu_record_is_now_enabled">The application is now enable to record calls</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_terms">terms of use</string>
    <string name="no_records_message">"There are no recordings in this phone.
To enable record ability open the main menu and choose \"Enable Record\".
After that the application will record all your incoming and outgoing calls."</string>
    <string name="notification_text">The phone will stop the recording when the conversation will end</string>
    <string name="notification_ticker">Recording is now Starting</string>
    <string name="notification_title">The phone is now recording the conversation</string>
    <string name="options_delete">Delete</string>
    <string name="options_title">Options Title</string>
    <string name="radio_Disable_record">Disable Record</string>
    <string name="radio_Enable_record">Enable Record</string>
    <string name="reciever_end_call">End Record call</string>
    <string name="reciever_start_call">Start record call</string>
    <string name="record_impossible">Unfortunately, it is not possible to record calls in this device.</string>
    <string name="sendMail_body">This is a call record from your phone</string>
    <string name="sendMail_subject">Your record from your phone</string>
    <string name="send_mail">Send Mail</string>
    <string name="textview_startup">"Please choose if the application will record your calls.
You can always alter your choosing by pressing the Android menu button."</string>
    <string name="title_activity_main">Call recorder for android</string>
    <string name="withheld_number">Withheld Number</string>
</resources>
